--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,7 @@
 // fonts
-$font-main: 'Roboto', sans-serif;
+$font-main: "Poppins", sans-serif;
 
 // colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+$color-coral: #ff975a;
+$color-light_grey: #f0ebe5;
+$color-spruce: #0c474b;
