--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,13 @@
-/* @import 'core/variables';
-@import 'core/reset';
+/*;
+
 @import 'components/code';
 @import 'components/links';
 @import 'layout/page';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'pages/index'; */
+@import "core/reset";
+@import "core/variables";
+@import "components/titles";
+@import "components/article";
+@import "layout/hero";
