--- a/src/html/partials/article.html
+++ b/src/html/partials/article.html
@@ -1,5 +1,5 @@
-<article>
-  <img src="@@icon" alt="icon services" />
+<article class="article">
+  <img class="icon" src="@@icon" alt="icon services" />
   <h3 class="title">@@title</h3>
-  <p class="descriptio">@@subtitle</p>
+  <p class="description">@@subtitle</p>
 </article>
