--- a/src/scss/core/_reset.scss
+++ b/src/scss/core/_reset.scss
@@ -7,3 +7,11 @@ html {
   font-size: 62.5%;
   font-family: "Poppins", sans-serif;
 }
+
+h1,
+h2 {
+  font-size: 2.4rem;
+}
+h3 {
+  font-size: 2rem;
+}
