--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -88,8 +88,30 @@ main {
   width: 15ch;
   text-align: center;
 }
-.article .description {
+.description {
   font-size: 1.6rem;
   width: 20ch;
+  text-align: center;
+}
+/* *******SHIPMENTS******* */
+.shipping {
+  width: 100%;
+  height: 60vh;
+  background-color: #ff975a;
+}
+.shipping_article {
+  width: 90%;
+  color: #fff;
+  margin: 40px;
+}
+.title-white {
+  font-weight: 600;
+  margin: 15px auto;
+  color: #fff;
+}
+.link-buy {
+  padding: 10px;
+  font-size: 1.6rem;
+  color: #fff;
   text-align: center;
 }
