--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,28 +58,40 @@ main {
 .services {
   width: 100%;
   height: auto;
-  padding: 40px 47px;
+  padding-bottom: 40px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   row-gap: 40px;
   background-color: #f0ebe5;
+  place-items: center;
 }
 
-.services h2 {
+.services_text {
+  width: 85%;
+  min-width: 280px;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 50px;
   text-align: center;
+  letter-spacing: -1px;
 }
 .services span {
   text-transform: uppercase;
 }
 .article {
+  display: flex;
   margin: 0 60px;
+  max-width: 250px;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
 }
 .article .icon {
   margin-bottom: 45px;
-}
-.article .icon {
-  transform: translateX(40px);
+  width: 90px;
+  max-width: 90px;
 }
 
 .article .title {
