--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,7 @@
 @import "components/article";
 @import "layout/hero";
 
-.hero {
+.header {
   display: flex;
   width: 100%;
   min-width: 320px;
@@ -25,6 +25,14 @@
   background-size: cover;
 }
 
+.header__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  transform: translateY(65px);
+}
 .buy-now {
   width: 176px;
   height: 48;
@@ -44,14 +52,6 @@
 main {
   display: flex;
   flex-direction: column;
-}
-.hero__text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  flex-wrap: wrap;
-  transform: translateY(65px);
 }
 
 /* *****SERVICES***** */
@@ -89,41 +89,96 @@ main {
   text-align: center;
 }
 .article .icon {
-  margin-bottom: 45px;
   width: 90px;
   max-width: 90px;
+  margin: auto;
 }
 
 .article .title {
   font-size: 2rem;
+  margin-top: 40px;
   margin-bottom: 15px;
   width: 15ch;
   text-align: center;
 }
 .description {
   font-size: 1.6rem;
-  width: 20ch;
+  width: 22ch;
   text-align: center;
 }
 /* *******SHIPMENTS******* */
 .shipping {
+  /*   display: relative; */
   width: 100%;
   height: 60vh;
   background-color: #ff975a;
 }
 .shipping_article {
-  width: 90%;
+  /*   position: absolute; */
+  /*   left: 10%; */
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
   color: #fff;
-  margin: 40px;
+}
+.icon {
+  margin-top: 40px;
+  width: 90px;
+  max-width: 90px;
+  flex-grow: 0;
+  margin: auto;
 }
 .title-white {
   font-weight: 600;
   margin: 15px auto;
   color: #fff;
+  margin: auto;
 }
+.shipping__info {
+  font-size: 1.4rem;
+  margin: auto;
+}
+
 .link-buy {
   padding: 10px;
   font-size: 1.6rem;
   color: #fff;
+  margin: auto;
+}
+/* ***** ENJOY***** */
+.enjoy {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-rows: 500px;
+  background-color: #f0ebe5;
+  height: 80vh;
+}
+.enjoy__img {
+  width: 100%;
+  height: 50%;
+  object-fit: contain;
+  margin-top: 130px;
+}
+.enjoy__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 85px 25px 0;
+}
+.enjoy__info h2 {
+  columns: #333;
+  font-size: 2.4rem;
+  font-weight: 600;
+  margin-bottom: 24px;
+  text-align: center;
+}
+.enjoy__info p {
+  color: #333;
+  font-size: 1.4rem;
   text-align: center;
 }
