--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -149,37 +149,35 @@ main {
 }
 /* *******SHIPMENTS******* */
 .shipping {
-  /*   display: relative; */
+  display: flex;
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 60px;
   width: 100%;
-  height: 60vh;
+  height: 80vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #ff975a;
 }
-.shipping_article {
-  /*   position: absolute; */
-  /*   left: 10%; */
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 80%;
-  color: #fff;
-}
-.icon {
+.shipping__icon {
   margin-top: 40px;
+  margin-bottom: 20px;
   width: 90px;
   max-width: 90px;
   flex-grow: 0;
   margin: auto;
 }
+
 .title-white {
   font-weight: 600;
-  margin: 15px auto;
   color: #fff;
   margin: auto;
 }
 .shipping__info {
   font-size: 1.4rem;
+  color: #fff;
   margin: auto;
 }
 
@@ -192,15 +190,15 @@ main {
 /* ***** ENJOY***** */
 .enjoy {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-auto-rows: 500px;
+  grid-template-rows: 1fr 1fr;
+  grid-auto-columns: 100%;
   background-color: #f0ebe5;
+
   height: 80vh;
 }
 .enjoy__img {
   width: 100%;
-  height: 50%;
+  height: 100%;
   object-fit: contain;
   margin-top: 130px;
 }
