update enjoy section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -188,38 +188,51 @@ main {
   margin: auto;
 }
 /* ***** ENJOY***** */
-.enjoy {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-auto-columns: 100%;
-  background-color: #f0ebe5;
-
-  height: 80vh;
-}
-.enjoy__img {
+.enjoy__container {
   width: 100%;
-  height: 100%;
-  object-fit: contain;
-  margin-top: 130px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 3fr 2fr;
+  grid-gap: 15px;
+  grid-auto-flow: column;
+  grid-auto-columns: 50px;
+  background-color: #f0ebe5;
 }
-.enjoy__info {
+.enjoy__item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin: 85px 25px 0;
 }
-.enjoy__info h2 {
-  columns: #333;
+
+.enjoy__item h2 {
+  margin-top: 80px;
   font-size: 2.4rem;
   font-weight: 600;
   margin-bottom: 24px;
   text-align: center;
 }
-.enjoy__info p {
-  color: #333;
+.enjoy__item img {
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.enjoy__item p {
+  color: #0c454b;
   font-size: 1.4rem;
   text-align: center;
+  margin-bottom: 0;
+}
+.buy-now__enjoy {
+  width: 176px;
+  height: 48;
+  padding: 10px;
+  margin-top: 40px;
+  font-size: 1.6rem;
+  color: #fff;
+  background-color: $color-spruce;
+  text-decoration: none;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 /* ****FOOTER**** */
