--- a/src/html/partials/enjoy.html
+++ b/src/html/partials/enjoy.html
@@ -1,13 +1,14 @@
 <section class="enjoy">
-  <div class="enjoy__info">
-    <h2>Disfruta creando espacios</h2>
-    <p>Una línea de productos diseñados para todos tus espacios</p>
-    <a class="buy-now" href="#">comprar ahora</a>
-  </div>
+    <div class="enjoy__container">
+      <div class="enjoy__item">
+        <h2>Disfruta creando espacios</h2>
+        <p>Una línea de productos diseñados para todos tus espacios</p>
+        <a class="buy-now__enjoy" href="#">comprar ahora</a>
+      </div>
 
-  <img
-    class="enjoy__img"
-    src="./assets/images/creando-espacios.jpg"
-    alt="metal storage baskets in the bathroom with towels and toilet paper"
-  />
-</section>
+      <div  class="enjoy__item"><img
+       
+        src="./assets/images/creando-espacios.jpg"
+        alt="metal storage baskets in the bathroom with towels and toilet paper"
+      /> </div>
+  </section>
