--- a/src/html/partials/services.html
+++ b/src/html/partials/services.html
@@ -4,7 +4,7 @@
   </div>
 
   <include
-    src="./partials/article.html"
+    src="./article.html"
     icon="./assets/images/icon_1.png"
     title="Lo que necesitas"
     subtitle="Una linea de productos diseñados para
@@ -12,14 +12,14 @@
   ></include>
 
   <include
-    src="./partials/article.html"
+    src="./article.html"
     icon="./assets/images/icon_2.png"
     title="Materias primas sustentables"
     subtitle="Todos los productos con materias primas sustentables"
   ></include>
 
   <include
-    src="./partials/article.html"
+    src="article.html"
     icon="./assets/images/icon_3.png"
     title="Guía"
     subtitle="Soporte y asesoramiento para ayudarte con tu objetivo"
