--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,1 +1,26 @@
+<header class="header">
+  <div class="hamb"><i class="fa-solid fa-bars fa-2x"></i></div>
+  <img class="logo" src="./assets/images/logo.png" alt="logo Open Spaces" />
+  <nav class="nav">
+    <ul class="list">
+      <li class="list-item">
+        <a class="link" href="#">Productos</a>
+      </li>
+      <li class="list-item">
+        <a class="link" href="#">Colecciones</a>
+      </li>
+      <li class="list-item">
+        <a class="link" href="#">Tienda</a>
+      </li>
 
+      <li class="list-item">
+        <a class="link" href="#">Inicio</a>
+      </li>
+    </ul>
+  </nav>
+
+  <div class="header__text">
+    <h1 class="main-title">Disfruta creando espacios</h1>
+    <a class="buy-now" href="#">comprar ahora</a>
+  </div>
+</header>
