Add header v.tablet except logo

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -42,7 +42,7 @@
           ><i class="fa-brands fa-linkedin-in icon-social-network fa-2x"></i
         ></a>
 
-        <a href="https://www.instagram.com/yampodog/">
+        <a href="https://www.instagram.com/yampodog/" target="_blank">
           <i class="fa-brands fa-instagram fa-2x"></i>
         </a>
 
@@ -54,5 +54,7 @@
       </div>
     </nav>
   </div>
-  <!--     <a  class="arrow-up" href="./index.html"> <i class="fa-solid fa-arrow-up"></i></a> -->
+  <div class="arrow">
+    <a href="./index.html"> <i class="fa-solid fa-arrow-up fa-6x"></i></a>
+  </div>
 </footer>
