--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,6 +34,11 @@ o */
   padding: 10px;
   left: -140px;
   top: -165px;
+  color: #0c454b;
+  @media all and (min-width: 768px) {
+    left: -300px;
+    top: -150px;
+  }
 }
 
 .nav {
@@ -58,21 +63,30 @@ o */
   background-color: #0c454b;
 }
 
-/* .link-signup:before {
-  padding-left: 4px;
-
-  color: white;
-} */
 .logo {
   margin-bottom: 70px;
-  margin-top: -75px;
+  margin-top: -45px;
+  @media all and (min-width: 768px) {
+  }
 }
+
 .header__text {
   display: flex;
   flex-direction: column;
-  align-items: center;
   text-align: center;
   flex-wrap: wrap;
+
+  @media all and (min-width: 768px) {
+    align-items: left;
+  }
+}
+
+.header__text h1 {
+  @media all and (min-width: 768px) {
+    text-align: left;
+    width: 16ch;
+    font-size: 3.6rem;
+  }
 }
 .buy-now {
   width: 176px;
@@ -84,6 +98,8 @@ o */
   background-color: $color-spruce;
   text-decoration: none;
   text-transform: capitalize;
+  @media all and (min-width: 768px) {
+  }
 }
 
 .a:hover {
@@ -281,4 +297,8 @@ main {
   color: #b6c8c9;
   margin-right: 16px;
   margin-bottom: 60px;
+}
+
+.arrow a {
+  background-color: red;
 }
