--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -114,6 +114,7 @@ main {
 }
 
 /* *****SERVICES***** */
+
 .services {
   width: 100%;
   height: auto;
@@ -218,7 +219,12 @@ main {
   grid-auto-flow: column;
   grid-auto-columns: 50px;
   background-color: #f0ebe5;
+  @media all and (min-width: 768px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 340px 475px;
+  }
 }
+
 .enjoy__item {
   display: flex;
   flex-direction: column;
