--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -22,17 +22,11 @@
       </ul>
     </nav>
   </div>
-
   <div class="footer__nav">
     <h3>Contacto</h3>
     <nav>
       <ul>
-        s
-        <li class="link">
-          <a href="mailto:morales.lupe@gmail.com" target="_blank"
-            >ayuda@openspaces.com</a
-          >
-        </li>
+        <li class="link"><a href="#">ayuda@openspaces.com</a></li>
         <li class="link"><a href="#">Socios</a></li>
         <div class="container-social-network">
           <a
@@ -54,7 +48,8 @@
       </ul>
     </nav>
   </div>
+
   <div class="arrow">
-    <a href="./index.html"> <i class="fa-solid fa-arrow-up fa-6x"></i></a>
+    <a href="./index.html"><img src="./assets/images/arrow-up.png" alt="arrow up" />  </i></a>
   </div>
 </footer>
