--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+  <section class="footer__container"  >
   <div class="footer__nav">
     <h3>Tienda</h3>
     <nav>
@@ -48,6 +49,7 @@
       </ul>
     </nav>
   </div>
+</section>
 
   <div class="arrow">
     <a href="./index.html"><img src="./assets/images/arrow-up.png" alt="arrow up" />  </i></a>
