--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -64,8 +64,8 @@ o */
 }
 
 .logo {
-  margin-bottom: 70px;
-  margin-top: -45px;
+  margin-bottom: 50px;
+  margin-top: -25px;
   @media all and (min-width: 768px) {
   }
 }
@@ -74,6 +74,7 @@ o */
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   flex-wrap: wrap;
 
   @media all and (min-width: 768px) {
@@ -272,13 +273,15 @@ main {
   height: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: right;
+  align-items: flex-end;
   background-color: #0c454b;
   @media all and (min-width: 768px) {
     flex-direction: row;
     justify-content: center;
   }
+}
+.footer__container {
 }
 .footer__nav {
   width: 100%;
