section enjoy responsive

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -4,17 +4,17 @@
   <nav class="nav">
     <ul class="list">
       <li class="list-item">
-        <a class="link" href="#">Productos</a>
+        <a class="link-nav" href="#">Productos</a>
       </li>
       <li class="list-item">
-        <a class="link" href="#">Colecciones</a>
+        <a class="link-nav" href="#">Colecciones</a>
       </li>
       <li class="list-item">
-        <a class="link" href="#">Tienda</a>
+        <a class="link-nav" href="#">Tienda</a>
       </li>
 
       <li class="list-item">
-        <a class="link" href="#">Inicio</a>
+        <a class="link-nav" href="#">Inicio</a>
       </li>
     </ul>
   </nav>
