--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,7 +60,7 @@ o */
   list-style-type: none;
 }
 
-.link {
+.link-nav {
   padding: 10px;
   font-size: 16px;
   font-weight: bold;
@@ -68,8 +68,9 @@ o */
   color: #0c454b;
 }
 
-.link:hover {
+.link-nav:hover {
   background-color: #b6c8c9;
+  transform: scale(1.2);
 }
 
 .logo {
@@ -233,6 +234,10 @@ main {
     grid-template-columns: 1fr;
     grid-template-rows: 340px 475px;
   }
+  @media all and (min-width: 120px) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
 }
 
 .enjoy__item {
@@ -305,8 +310,6 @@ main {
 }
 .link {
   display: flex;
-  /*  justify-content: center;
-  align-items: center; */
   list-style: none;
   line-height: 0;
   text-align: left;
