--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -290,12 +290,17 @@ main {
   justify-content: right;
   align-items: flex-end;
   background-color: #0c454b;
-  @media all and (min-width: 768px) {
-    flex-direction: row;
-    justify-content: center;
-  }
 }
 .footer__container {
+  @media all and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    column-gap: 70px;
+  }
+  @media all and (min-width: 768px) {
+    column-gap: 200px;
+  }
 }
 .footer__nav {
   width: 100%;
@@ -336,4 +341,7 @@ main {
   position: absolute;
   top: -50px;
   right: 20px;
+  @media all and (min-width: 768px) {
+    top: -100px;
+  }
 }
