--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -4,10 +4,10 @@
     <h3>Tienda</h3>
     <nav>
       <ul>
-        <li class="link"><a href="#">Producots</a></li>
-        <li class="link"><a href="#">Cajoneras</a></li>
-        <li class="link"><a href="#">Para toda la casa</a></li>
-        <li class="link"><a href="#">Habitaciones</a></li>
+        <li class="link"><a href="https://adalab.es/">Producots</a></li>
+        <li class="link"><a href="https://adalab.es/">Cajoneras</a></li>
+        <li class="link"><a href="https://adalab.es/">Para toda la casa</a></li>
+        <li class="link"><a href="https://adalab.es/">Habitaciones</a></li>
       </ul>
     </nav>
   </div>
@@ -16,10 +16,10 @@
     <h3>Nosotros</h3>
     <nav>
       <ul>
-        <li class="link"><a href="#">Nuestra guia</a></li>
-        <li class="link"><a href="#">Nuestro diseño</a></li>
-        <li class="link"><a href="#">Nuestra historia</a></li>
-        <li class="link"><a href="#">Ayuda</a></li>
+        <li class="link"><a href="https://adalab.es/">Nuestra guia</a></li>
+        <li class="link"><a href="https://adalab.es/">Nuestro diseño</a></li>
+        <li class="link"><a href="https://adalab.es/">Nuestra historia</a></li>
+        <li class="link"><a href="https://adalab.es/">Ayuda</a></li>
       </ul>
     </nav>
   </div>
@@ -27,8 +27,8 @@
     <h3>Contacto</h3>
     <nav>
       <ul>
-        <li class="link"><a href="#">ayuda@openspaces.com</a></li>
-        <li class="link"><a href="#">Socios</a></li>
+        <li class="link"><a href="mailto:morales.lupe@gmail.com" target="_blank">ayuda@openspaces.com</a></li>
+        <li class="link"><a href="https://adalab.es/">Socios</a></li>
         <div class="container-social-network">
           <a
             href="https://www.linkedin.com/in/guadalupe-morales-carmona-817245226/"
