--- a/src/html/partials/services.html
+++ b/src/html/partials/services.html
@@ -2,26 +2,27 @@
   <div class="services_text">
     <h2>Volverse organizado se siente mejor con <span> open spaces</span></h2>
   </div>
-
-  <include
-    src="./article.html"
-    icon="./assets/images/icon_1.png"
-    title="Lo que necesitas"
-    subtitle="Una linea de productos diseñados para
+  <div class="container-articules">
+    <include
+      src="./article.html"
+      icon="./assets/images/icon_1.png"
+      title="Lo que necesitas"
+      subtitle="Una linea de productos diseñados para
     todos tus espacio"
-  ></include>
+    ></include>
 
-  <include
-    src="./article.html"
-    icon="./assets/images/icon_2.png"
-    title="Materias primas sustentables"
-    subtitle="Todos los productos con materias primas sustentables"
-  ></include>
+    <include
+      src="./article.html"
+      icon="./assets/images/icon_2.png"
+      title="Materias primas sustentables"
+      subtitle="Todos los productos con materias primas sustentables"
+    ></include>
 
-  <include
-    src="article.html"
-    icon="./assets/images/icon_3.png"
-    title="Guía"
-    subtitle="Soporte y asesoramiento para ayudarte con tu objetivo"
-  ></include>
+    <include
+      src="article.html"
+      icon="./assets/images/icon_3.png"
+      title="Guía"
+      subtitle="Soporte y asesoramiento para ayudarte con tu objetivo"
+    ></include>
+  </div>
 </section>
