--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -4,9 +4,9 @@
     <h3>Tienda</h3>
     <nav>
       <ul>
-        <li class="link"><a href="https://adalab.es/">Producots</a></li>
+        <li class="link"><a href="https://adalab.es/">Productos</a></li>
         <li class="link"><a href="https://adalab.es/">Cajoneras</a></li>
-        <li class="link"><a href="https://adalab.es/">Para toda la casa</a></li>
+        <li class="link"><a href="https://adalab.es/">Para la casa</a></li>
         <li class="link"><a href="https://adalab.es/">Habitaciones</a></li>
       </ul>
     </nav>
@@ -16,7 +16,7 @@
     <h3>Nosotros</h3>
     <nav>
       <ul>
-        <li class="link"><a href="https://adalab.es/">Nuestra guia</a></li>
+        <li class="link"><a href="https://adalab.es/">Nuestra guía</a></li>
         <li class="link"><a href="https://adalab.es/">Nuestro diseño</a></li>
         <li class="link"><a href="https://adalab.es/">Nuestra historia</a></li>
         <li class="link"><a href="https://adalab.es/">Ayuda</a></li>
