--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,26 +1,27 @@
 <header class="header">
   <div class="hamb"><i class="fa-solid fa-bars fa-2x"></i></div>
   <img class="logo" src="./assets/images/logo.png" alt="logo Open Spaces" />
+
   <nav class="nav">
     <ul class="list">
       <li class="list-item">
-        <a class="link-nav" href="#">Productos</a>
+        <a class="link-nav" href="https://adalab.es/">Productos</a>
       </li>
       <li class="list-item">
-        <a class="link-nav" href="#">Colecciones</a>
+        <a class="link-nav" href="https://adalab.es/">Colecciones</a>
       </li>
       <li class="list-item">
-        <a class="link-nav" href="#">Tienda</a>
+        <a class="link-nav" href="https://adalab.es/">Tienda</a>
       </li>
 
       <li class="list-item">
-        <a class="link-nav" href="#">Inicio</a>
+        <a class="link-nav" href="../index.html">Inicio</a>
       </li>
     </ul>
   </nav>
 
   <div class="header__text">
     <h1 class="main-title">Disfruta creando espacios</h1>
-    <a class="buy-now" href="#">comprar ahora</a>
+    <a class="buy-now" href="https://adalab.es/">comprar ahora</a>
   </div>
 </header>
