--- a/src/html/partials/shipping.html
+++ b/src/html/partials/shipping.html
@@ -5,6 +5,6 @@
     alt="icon services"
   />
   <h2 class="title-white">Envío gratis garantizado</h2>
-  <p class="shipping__info">Envío gratis en compras desde 100"</p>
+  <p class="shipping__info">Envío gratis en compras desde 100€"</p>
   <a class="link-buy" href="#">Comprar ahora</a>
 </section>
