reposition logo, menu hamburguer and shipping seccion v.mobile

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,7 @@
 <header class="header">
-  <div class="hamb"><i class="fa-solid fa-bars fa-2x"></i></div>
+  <div class="hamb">
+    <a href="https://adalab.es/"><i class="fa-solid fa-bars fa-2x"></i></a>
+  </div>
   <img class="logo" src="./assets/images/logo.png" alt="logo Open Spaces" />
 
   <nav class="nav">
