--- a/src/html/partials/shipping.html
+++ b/src/html/partials/shipping.html
@@ -4,7 +4,9 @@
     src="./assets/images/icon_4.png"
     alt="icon services"
   />
-  <h2 class="title-white">Envío gratis garantizado</h2>
-  <p class="shipping__info">Envío gratis en compras desde 100€"</p>
-  <a class="link-buy" href="#">Comprar ahora</a>
+  <div class="shipping__info">
+    <h2 class="title-white">Envío gratis garantizado</h2>
+    <p class="shipping__info">Envío gratis en compras desde 100€</p>
+    <a class="link-buy" href="#">Comprar ahora</a>
+  </div>
 </section>
