--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -33,7 +33,7 @@
 }
 .article {
   display: flex;
-  margin: 0 60px;
+  margin: 20px 60px;
   max-width: 250px;
   flex-direction: column;
   justify-content: center;
@@ -48,7 +48,7 @@
 
 .article .title {
   font-size: 2rem;
-  margin-top: 40px;
+  margin-top: 35px;
   margin-bottom: 15px;
   width: 15ch;
   text-align: center;
