--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -75,7 +75,9 @@
   flex-wrap: wrap;
 
   @media all and (min-width: 768px) {
-    align-items: left;
+    align-items: initial;
+    text-align: initial;
+    justify-content: left;
   }
 }
 
@@ -96,8 +98,10 @@
   background-color: $color-spruce;
   text-decoration: none;
   text-transform: capitalize;
+  @media all and (min-width: 768px) {
+    text-align: center;
+  }
 }
-
 .a:hover {
   background-color: #ff975a;
 }
