--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -52,6 +52,6 @@
 </section>
 
   <div class="arrow">
-    <a  href="./index.html"><img src="./assets/images/arrow-up.png" alt="arrow up" />  </i></a>
+    <a  href="./index.html"><img src="./assets/images/arrow-up.png" alt="arrow up icon" />  </i></a>
   </div>
 </footer>
