--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -6,7 +6,7 @@
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   row-gap: 40px;
-  background-color: #f0ebe5;
+  background-color: $color-light_grey;
   place-items: center;
 }
 
