--- a/src/scss/layout/_enjoy.scss
+++ b/src/scss/layout/_enjoy.scss
@@ -6,7 +6,7 @@
   grid-gap: 15px;
   grid-auto-flow: column;
   grid-auto-columns: 50px;
-  background-color: #f0ebe5;
+  background-color: $color-light_grey;
 
   @media all and (min-width: 768px) {
     grid-template-columns: 1fr;
@@ -37,7 +37,7 @@
   object-position: center;
 }
 .enjoy__item p {
-  color: #0c454b;
+  color: $color-spruce;
   font-size: 1.4rem;
   text-align: center;
   margin-bottom: 0;
@@ -55,5 +55,5 @@
   text-transform: capitalize;
 }
 .enjoy__item a:hover {
-  background-color: orange;
+  background-color: $color-coral;
 }
