--- a/src/html/partials/enjoy.html
+++ b/src/html/partials/enjoy.html
@@ -6,9 +6,7 @@
         <a class="buy-now__enjoy" href="#">comprar ahora</a>
       </div>
 
-      <div  class="enjoy__item"><img
-       
-        src="./assets/images/creando-espacios.jpg"
+      <div  class="enjoy__item"><img src="./assets/images/creando-espacios.jpg"
         alt="metal storage baskets in the bathroom with towels and toilet paper"
       /> </div>
   </section>
