--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,10 +1,6 @@
 <header class="header">
   <div class="hamb">
-    <a href="https://adalab.es/"
-      ><i class="fa-solid fa-bars fa-2x">
-        <!-- <img src="./assets/images/icon-ham.png" alt="icon menu"> -->
-      </i></a
-    >
+    <a href="https://adalab.es/"><i class="fa-solid fa-bars fa-2x"></i></a>
   </div>
   <img class="logo" src="./assets/images/logo.png" alt="logo Open Spaces" />
 
