add open-spaces section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "components/titles";
 @import "components/article";
 @import "layout/header";
+@import "layout/open-space";
 @import "layout/services";
 @import "layout/shipping";
 @import "layout/enjoy";
