--- a/src/scss/layout/_open-space.scss
+++ b/src/scss/layout/_open-space.scss
@@ -14,7 +14,7 @@
   width: 90%;
   margin: 0 auto;
   justify-content: center;
-  height: auto;
+  align-items: baseline;
 }
 @media all and (min-width: 768px) {
   .open-space__text {
