--- a/src/scss/layout/_shipping.scss
+++ b/src/scss/layout/_shipping.scss
@@ -12,35 +12,28 @@
 }
 
 .shipping__icon {
-  margin-top: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   width: 90px;
   max-width: 90px;
   flex-grow: 0;
   margin: auto;
 }
+
 .shipping__info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  color: #fff;
+  margin: 0 auto;
 }
 .title-white {
   font-weight: 600;
   color: #fff;
-  margin: auto;
-}
-.shipping__info {
-  font-size: 1.4rem;
-  color: #fff;
-  margin: auto;
+  margin: 50px auto 0;
 }
 
 .link-buy {
   padding: 10px;
   font-size: 1.6rem;
   color: #fff;
-  margin: auto;
+  margin: 0 auto;
 }
 .shipping a:hover {
   color: $color-spruce;
