--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -39,6 +39,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  @media all and (min-width: 768px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media all and (min-width: 1200px) {
+    margin: 20px 60px;
+  }
 }
 .article .icon {
   width: 90px;
